# astra-torch

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MEMORY_FIX_SUMMARY.md  MEMORY_OPTIMIZATION.md  README.md  SECURITY.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: docker-test.yml  docs.yml  publish.yml  test.yml
astra_torch/: LAMINO_README.md  __init__.py  cbct.py  lamino.py  parallel2D.py
astra_torch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: conf.py  index.md  installation.md  quickstart.md
docs/api/: index.md
examples/: README.md  basic_cbct_example.py  laminography_example.py  parallel2d_example.py
tests/: __init__.py  conftest.py  test_cbct.py  test_lamino.py  test_parallel2D.py
